--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-amplify": "^3.0.23",
     "clsx": "^1.1.1",
     "colorette": "^1.2.1",
     "react": "^16.13.1",
@@ -16,6 +17,7 @@
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "@aws-amplify/cli": "^4.27.0",
     "@testing-library/user-event": "^12.0.11",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
